Windows: fix incorrect assumption of CharacteristicUserDescription encoding

`QLowEnergyController_winrt.cpp` incorrectly assumed that
CharacteristicUserDescription returns UTF16 when it actually
returns UTF8.

For more details, see the bug report: https://bugreports.qt.io/browse/QTBUG-132202